--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@replit/database": "^2.0.1",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   }
